修改登录密码 + 份额记账50%

--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardSuccessPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardSuccessPage.vm
@@ -22,7 +22,10 @@ $(function(){
 				href="javascript:;"><i class="trans icon"></i>#if ($CustinfoVo.invnm)
                 	    $!{CustinfoVo.invnm}
                 	#else
-                	    $!{CustinfoVo.mobileno}
+                	    #set($tailStr=$CustinfoVo.mobileno)
+						#set($start=$tailStr.substring(0,3))
+						#set($end=$tailStr.substring(7,11))
+						$start****$end
                 	#end<a 
 				href="${staticDomain}/cust/logout.htm" class="trans out">安全退出</a></span>
 			</div>
