--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -14,18 +14,40 @@ $(function(){
         }
     });
 	
-	//注册按钮
+	//修改登录密码按钮
+	$("#btn-settingLoginPwd").on("click",function(){
+		if(!check_null($("#login_password0"), "密码不能为空")){
+			return false;
+		}
+		if(!check_pwd1($("#login_password1"))){
+			return false;
+		}
+		if(!check_pwd2($("#login_password2"))){
+			return false;
+		}
+		var errLen = $("#form-settingLoginPwd ul li.error").length;
+		if(errLen>0){
+			$("ul li.error:eq(0) input[type=text]").focus();
+			$("ul li.error:eq(0) input[type=password]").focus();
+		}else{
+			$("#form-settingLoginPwd").submit();
+		}
+	});
+	
+	#if($CustinfoVo.openaccount=="Y")
+	//修改交易密码按钮
 	$("#btn-settingTradePwd").on("click",function(){
-		if(!check_null($("#password0"), "密码不能为空")){
+		
+		if(!check_null($("#trade_password0"), "密码不能为空")){
 			return false;
 		}
-		if(!check_pwd1($("#password1"))){
+		if(!check_pwd1($("#trade_password1"))){
 			return false;
 		}
-		if(!check_pwd2($("#password2"))){
+		if(!check_pwd2($("#trade_password2"))){
 			return false;
 		}
-		var errLen = $("ul li.error").length;
+		var errLen = $("#form-settingTradePwd ul li.error").length;
 		if(errLen>0){
 			$("ul li.error:eq(0) input[type=text]").focus();
 			$("ul li.error:eq(0) input[type=password]").focus();
@@ -33,16 +55,77 @@ $(function(){
 			$("#form-settingTradePwd").submit();
 		}
 	});
+	#end
+	// btn-getMsgCode
+	$("#btn-getMsgCode").on("click",function(){
+        $.ajax({
+     		type: "GET",
+    		url: "../ajaxcust/getMsgCode.htm",
+    		data: {
+				mobileno: $("#mobileno").val(),
+				verifycode: $("#verifycode").val()
+    		},
+    		dataType: "json",
+    		success: function(b) {
+                if (b.errCode == "0000") {
+					alert("手机验证码已发送");
+					// 倒计时
+					var count = 60;
+            		var countdown = setTimeout(countDown, 1000);
+            		$("#btn-getMsgCode").addClass("off");
+            		$("#btn-getMsgCode").attr("disabled","disabled");
+            		
+            		function countDown() {
+            			$("#btn-getMsgCode").prop("disabled", true); 
+            			$("#btn-getMsgCode").val("等待" + count + "秒!"); 
+            			if (count == 0) { 
+            				$("#btn-getMsgCode").val("重新发送"); 
+            				$("#btn-getMsgCode").removeClass("off");
+            				$("#btn-getMsgCode").removeAttr("disabled"); 
+            				clearTimeout(countdown); 
+            			}else{
+            				count--; 
+            				setTimeout(countDown, 1000);
+            			}
+            		}
+					//
+                } else {
+                  	var errCode = b.errCode;
+					var errMsg = b.errMsg;
+					// alert(errCode + ": " + errMsg);
+					if("errMsg_mobileno"==errCode){
+						$("#errMsg_mobileno").addClass("error");
+						$("#errMsg_mobileno > .tips-check").html("<i class=icon></i>" + errMsg);
+					}else 
+					if("errMsg_verifycode"==errCode){
+						$("#errMsg_verifycode").addClass("error");
+						$("#errMsg_verifycode > .tips-check").html("<i class=icon></i>" + errMsg);
+					}else{
+						alert(errMsg);
+					}
+					
+					var src = $("#btn-verifycode").attr("src");
+					$("#btn-verifycode").attr("src",src +'?time='+(new Date()));
+                }
+        	}
+        });
+	});
 	
 #if("1"==$TAB || "1S"==$TAB)
     $("#tab1").addClass("on");
     $("#panel1").removeClass("slide-out");
 #elseif("2"==$TAB || "2S"==$TAB)
-	$("#tab2").addClass("on");
+    $("#tab2").addClass("on");
     $("#panel2").removeClass("slide-out");
+#elseif("3"==$TAB || "3S"==$TAB)
+	$("#tab3").addClass("on");
+    $("#panel3").removeClass("slide-out");
 #end
 
 #if("1S"==$TAB)
+	errorBox("修改登录密码","成功！");
+#end
+#if("2S"==$TAB)
 	errorBox("修改交易密码","成功！");
 #end
 
@@ -64,7 +147,10 @@ $(function(){
     				#if ($CustinfoVo.invnm)
     					$!{CustinfoVo.invnm}
                     #else
-                        $!{CustinfoVo.mobileno}
+                        #set($tailStr=$CustinfoVo.mobileno)
+						#set($start=$tailStr.substring(0,3))
+						#set($end=$tailStr.substring(7,11))
+						$start****$end
                    	#end<a 
     			href="${staticDomain}/cust/logout.htm" class="trans out">安全退出</a></span>
     		</div>
@@ -86,45 +172,89 @@ $(function(){
         <div class="main fr">
             <div class="setting-content">
                 <div class="tabs password-tabs clearfix">
-                    <a class="btn fl" href="findPasswordStep1.html">修改登录密码</a>
-                    <a id="tab1" class="btn tab fl" href="javascript:;">修改交易密码</a>
-                    <a id="tab2" class="btn tab fl" href="javascript:;">忘记交易密码</a>
+					##findPasswordStep1.html
+                    <a id="tab1" class="btn tab fl" href="javascript:;">修改登录密码</a>
+					#if($CustinfoVo.openaccount=="Y")
+                    <a id="tab2" class="btn tab fl" href="javascript:;">修改交易密码</a>
+                    <a id="tab3" class="btn tab fl" href="javascript:;">忘记交易密码</a>
+					#end
                 </div>
 				<div class="tips">交易密码： 为使用幼富宝交易时所需要输入的密码，不可与登录密码相同！</div>
                 <div class="panels password-panels">
-                    <div id="panel1" class="panel slide-out">
+					<div id="panel1" class="panel slide-out">
+						<form id="form-settingLoginPwd" class="common-form" action="${ufbDomain}/setting/settingLoginPwd.htm" method="post">
+                            ${refreshTools.genInputHtml()}
+							<ul>
+                                <li id="errMsg_password0"
+                                #if($errMsg_login_password0)
+                                class="error"
+                                #end
+                                >
+                                    <span class="form-title">原登录密码</span>
+                                    <input id="login_password0" name="password0" class="ipt-password0 input-text" type="password" value="$!{login_password0}">
+                                    <span class="tips-normal"></span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_login_password0}</span>
+                                </li>
+                                <li id="errMsg_password1"
+                                #if($errMsg_login_password1)
+                                class="error"
+                                #end
+                                >
+                                    <span class="form-title">新登录密码</span>
+                                    <input id="login_password1" name="password1" class="ipt-password1 input-text" type="password" value="$!{login_password1}">
+                                    <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_login_password1}</span>
+                                </li>
+                                <li id="errMsg_password2"
+                                #if($errMsg_login_password2)
+                                class="error"
+                                #end
+                                >
+                                    <span class="form-title">登录密码确认</span>
+                                    <input id="login_password2" name="password2" class="ipt-password2 input-text" type="password" value="$!{login_password2}">
+                                    <span class="tips-normal">请再次输入密码</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_login_password2}</span>
+                                </li>
+                                <li>
+                                    <input id="btn-settingLoginPwd" class="input-button ok" type="button" value="提&nbsp;交">
+                                </li>
+                            </ul>
+                        </form>
+                    </div>
+					#if($CustinfoVo.openaccount=="Y")
+                    <div id="panel2" class="panel slide-out">
 						<form id="form-settingTradePwd" class="common-form" action="${ufbDomain}/setting/settingTradePwd.htm" method="post">
                             ${refreshTools.genInputHtml()}
 							<ul>
                                 <li id="errMsg_password0"
-                                #if($errMsg_password0)
+                                #if($errMsg_trade_password0)
                                 class="error"
                                 #end
                                 >
                                     <span class="form-title">原交易密码</span>
-                                    <input id="password0" name="password0" class="ipt-password0 input-text" type="password" value="$!{password0}">
+                                    <input id="trade_password0" name="password0" class="ipt-password0 input-text" type="password" value="$!{trade_password0}">
                                     <span class="tips-normal"></span>
-                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_password0}</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password0}</span>
                                 </li>
                                 <li id="errMsg_password1"
-                                #if($errMsg_password1)
+                                #if($errMsg_trade_password1)
                                 class="error"
                                 #end
                                 >
                                     <span class="form-title">新交易密码</span>
-                                    <input id="password1" name="password1" class="ipt-password1 input-text" type="password" value="$!{password1}">
+                                    <input id="trade_password1" name="password1" class="ipt-password1 input-text" type="password" value="$!{trade_password1}">
                                     <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
-                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_password1}</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password1}</span>
                                 </li>
                                 <li id="errMsg_password2"
-                                #if($errMsg_password2)
+                                #if($errMsg_trade_password2)
                                 class="error"
                                 #end
                                 >
                                     <span class="form-title">交易密码确认</span>
-                                    <input id="password2" name="password2" class="ipt-password2 input-text" type="password" value="$!{password2}">
+                                    <input id="trade_password2" name="password2" class="ipt-password2 input-text" type="password" value="$!{trade_password2}">
                                     <span class="tips-normal">请再次输入密码</span>
-                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_password2}</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password2}</span>
                                 </li>
                                 <li>
                                     <input id="btn-settingTradePwd" class="input-button ok" type="button" value="提&nbsp;交">
@@ -132,7 +262,7 @@ $(function(){
                             </ul>
                         </form>
                     </div>
-                    <div id="panel2" class="panel slide-out">
+                    <div id="panel3" class="panel slide-out">
                         <form class="common-form">
                             <ul>
                                 <li class="ok">
@@ -170,6 +300,7 @@ $(function(){
                             </ul>
                         </form>
                     </div>
+					#end
                 </div>
             </div>
         </div>
