--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header.vm
@@ -7,10 +7,14 @@
 				href="${staticDomain}/session/login.htm">资产总览</a>|<a 
 				href="${staticDomain}/setting/settingAccount.htm">账户管理</a>|<a 
 				href="helpNotice.html">帮助中心</a><span class="member" 
-				href="javascript:;"><i class="trans icon"></i>#if ($CustinfoVo.invnm)
+				href="javascript:;"><i class="trans icon"></i>
+					#if ($CustinfoVo.invnm)
                 	    $!{CustinfoVo.invnm}
                 	#elseif($CustinfoVo.mobileno)
-                	    $!{CustinfoVo.mobileno}
+                	    #set($tailStr=$CustinfoVo.mobileno)
+						#set($start=$tailStr.substring(0,3))
+						#set($end=$tailStr.substring(7,11))
+						$start****$end
 					#else
 						亲爱的用户 
                 	#end<a 
