--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -32,7 +32,10 @@ $(function(){
 			href="javascript:;"><i class="trans icon"></i>#if ($CustinfoVo.invnm)
                 	    $!{CustinfoVo.invnm}
                 	#else
-                	    $!{CustinfoVo.mobileno}
+						#set($tailStr=$CustinfoVo.mobileno)
+						#set($start=$tailStr.substring(0,3))
+						#set($end=$tailStr.substring(7,11))
+						$start****$end
                 	#end<a 
 			href="${staticDomain}/cust/logout.htm" class="trans out">安全退出</a></span></div>
     </div>
@@ -178,7 +181,10 @@ $(function(){
 					#if ($CustinfoVo.invnm)
                 	    $!{CustinfoVo.invnm}
                 	#else
-                	    $!{CustinfoVo.mobileno}
+                	    #set($tailStr=$CustinfoVo.mobileno)
+						#set($start=$tailStr.substring(0,3))
+						#set($end=$tailStr.substring(7,11))
+						$start****$end
                 	#end
 					</div>
                     <a href="${staticDomain}/setting/settingAccount.htm" class="header-setting"></a>
