--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingAccount.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingAccount.vm
@@ -23,7 +23,10 @@ $(function(){
 				#if ($CustinfoVo.invnm)
 					$!{CustinfoVo.invnm}
                 #else
-                    $!{CustinfoVo.mobileno}
+                    #set($tailStr=$CustinfoVo.mobileno)
+					#set($start=$tailStr.substring(0,3))
+					#set($end=$tailStr.substring(7,11))
+					$start****$end
                	#end<a 
 			href="${staticDomain}/cust/logout.htm" class="trans out">安全退出</a></span>
 		</div>
@@ -48,8 +51,25 @@ $(function(){
                     <li>幼教机构：$!{CustinfoVo.organization}</li>
                     <li>营业执照注册号：$!{CustinfoVo.business}</li>
                     <li>经办人：$!{CustinfoVo.invnm}</li>
-                    <li>身份证号：$!{CustinfoVo.idno}</li>
-                    <li>手机号：$!{CustinfoVo.mobileno}</li>
+                    <li>身份证号：
+						#if ($CustinfoVo.idno)
+						#set($tailStr=$CustinfoVo.idno)
+						#set($start=$tailStr.substring(0,1))
+						#set($l_0=$tailStr.length() - 1)
+						#set($l_1=$tailStr.length())
+						#set($end=$tailStr.substring($l_0,$l_1))
+						$start****************$end
+						#end
+					
+					</li>
+                    <li>手机号：
+						#if ($CustinfoVo.mobileno)
+						#set($tailStr=$CustinfoVo.mobileno)
+						#set($start=$tailStr.substring(0,3))
+						#set($end=$tailStr.substring(7,11))
+						$start****$end
+						#end
+					</li>
                 </ul>
             </div>
         </div>
