--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingCard.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingCard.vm
@@ -29,7 +29,10 @@ $(function(){
     				#if ($CustinfoVo.invnm)
     					$!{CustinfoVo.invnm}
                     #else
-                        $!{CustinfoVo.mobileno}
+                        #set($tailStr=$CustinfoVo.mobileno)
+						#set($start=$tailStr.substring(0,3))
+						#set($end=$tailStr.substring(7,11))
+						$start****$end
                    	#end<a 
     			href="${staticDomain}/cust/logout.htm" class="trans out">安全退出</a></span>
     		</div>
