--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -55,14 +55,32 @@ $(function(){
 			$("#form-settingTradePwd").submit();
 		}
 	});
+	//找回交易密码按钮
+	$("#btn-settingTradePwd-back").on("click",function(){
+		if(!check_phoneCode($("#msgcode"))){
+			return false;
+		}
+		if(!check_pwd1($("#trade_password1_back"))){
+			return false;
+		}
+		if(!check_pwd2($("#trade_password2_back"))){
+			return false;
+		}
+		var errLen = $("#form-settingTradePwd-back ul li.error").length;
+		if(errLen>0){
+			$("ul li.error:eq(0) input[type=text]").focus();
+			$("ul li.error:eq(0) input[type=password]").focus();
+		}else{
+			$("#form-settingTradePwd-back").submit();
+		}
+	});
 	#end
 	// btn-getMsgCode
 	$("#btn-getMsgCode").on("click",function(){
         $.ajax({
      		type: "GET",
-    		url: "../ajaxcust/getMsgCode.htm",
+    		url: "../setting/getMsgCode.htm",
     		data: {
-				mobileno: $("#mobileno").val(),
 				verifycode: $("#verifycode").val()
     		},
     		dataType: "json",
@@ -74,7 +92,10 @@ $(function(){
             		var countdown = setTimeout(countDown, 1000);
             		$("#btn-getMsgCode").addClass("off");
             		$("#btn-getMsgCode").attr("disabled","disabled");
-            		
+					// TODO
+					$("#msgcode").val(b.TODO);
+            		$("#msgcode").siblings(".tips-normal").hide();
+					//
             		function countDown() {
             			$("#btn-getMsgCode").prop("disabled", true); 
             			$("#btn-getMsgCode").val("等待" + count + "秒!"); 
@@ -88,22 +109,16 @@ $(function(){
             				setTimeout(countDown, 1000);
             			}
             		}
-					//
                 } else {
                   	var errCode = b.errCode;
 					var errMsg = b.errMsg;
-					// alert(errCode + ": " + errMsg);
-					if("errMsg_mobileno"==errCode){
-						$("#errMsg_mobileno").addClass("error");
-						$("#errMsg_mobileno > .tips-check").html("<i class=icon></i>" + errMsg);
-					}else 
-					if("errMsg_verifycode"==errCode){
+					//alert(errCode + ": " + errMsg);
+					if("errMsg_verifycode"==errCode || "errMsg_mobileno"==errCode){
 						$("#errMsg_verifycode").addClass("error");
 						$("#errMsg_verifycode > .tips-check").html("<i class=icon></i>" + errMsg);
 					}else{
 						alert(errMsg);
 					}
-					
 					var src = $("#btn-verifycode").attr("src");
 					$("#btn-verifycode").attr("src",src +'?time='+(new Date()));
                 }
@@ -128,7 +143,9 @@ $(function(){
 #if("2S"==$TAB)
 	errorBox("修改交易密码","成功！");
 #end
-
+#if("3S"==$TAB)
+	errorBox("找回交易密码","成功！");
+#end
 	
 });
 </script>
@@ -263,39 +280,59 @@ $(function(){
                         </form>
                     </div>
                     <div id="panel3" class="panel slide-out">
-                        <form class="common-form">
+                        <form id="form-settingTradePwd-back" class="common-form" action="${ufbDomain}/setting/settingTradePwdBack.htm" method="post">
+                            ${refreshTools.genInputHtml()}
                             <ul>
                                 <li class="ok">
                                     <span class="form-title">手机号</span>
                                     <div>189****1111</div>
                                 </li>
-                                <li>
+                                <li id="errMsg_verifycode"
+                                #if($errMsg_verifycode)
+                                class="error"
+                                #end
+                                >
                                     <span class="form-title">验证码</span>
-                                    <input class="ipt-code input-code" type="text" value="">
+									<input id="verifycode" name="verifycode" class="ipt-code input-code" type="text" value="$!{verifycode}">
                                     <span class="tips-normal">请输入验证码</span>
-                                    <span class="tips-check"><i class="icon"></i>验证提示</span>
+									<span class="form-verifyCode">
+        								<img id="btn-verifycode" src="${staticDomain}/createImageservlet"+"?time="+(+new Date())" onclick="javascript:this.src=this.src+'?time='+(+new Date())"/>
+        							</span>
+									<span class="tips-check"><i class="icon"></i>$!{errMsg_verifycode}</span>
                                 </li>
-                                <li>
+                                <li id="errMsg_msgcode"
+                                #if($errMsg_msgcode)
+                                class="error"
+                                #end
+                                >
                                     <span class="form-title">手机验证码</span>
-                                    <input class="ipt-phoneCode input-code" type="text" value="">
+									<input id="msgcode" name="msgcode" class="ipt-phoneCode input-code" type="text" value="$!{msgcode}">
                                     <span class="tips-normal">6位验证码</span>
-                                    <input class="input-button" type="button" value="获取验证码">
-                                    <span class="tips-check"><i class="icon"></i>验证提示</span>
+                                    <input id="btn-getMsgCode" class="input-button" type="button" value="获取验证码">
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_msgcode}</span>
                                 </li>
-                                <li class="ok">
+                                <li id="errMsg_password1_back"
+                                #if($errMsg_trade_password1_back)
+                                class="error"
+                                #end
+                                >
                                     <span class="form-title">新交易密码</span>
-                                    <input class="ipt-password1 input-text" type="password" value="">
+                                    <input id="trade_password1_back" name="password1" class="ipt-password1 input-text" type="password" value="$!{trade_password1_back}">
                                     <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
-                                    <span class="tips-check"><i class="icon"></i>验证提示</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password1_back}</span>
                                 </li>
-                                <li>
+                                <li id="errMsg_password2_back"
+                                #if($errMsg_trade_password2_back)
+                                class="error"
+                                #end
+                                >
                                     <span class="form-title">交易密码确认</span>
-                                    <input class="ipt-password2 input-text" type="password" value="">
+                                    <input id="trade_password2_back" name="password2" class="ipt-password2 input-text" type="password" value="$!{trade_password2_back}">
                                     <span class="tips-normal">请再次输入密码</span>
-                                    <span class="tips-check"><i class="icon"></i>验证提示</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password2_back}</span>
                                 </li>
                                 <li>
-                                    <input class="input-button ok" type="submit" value="提&nbsp;交">
+                                    <input id="btn-settingTradePwd-back" class="input-button ok" type="button" value="提&nbsp;交">
                                 </li>
                             </ul>
                         </form>
