--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
@@ -10,7 +10,7 @@
             <h2 class="title-main fl">资产总览 | 取现</h2>
         </div>
         <div class="notice">公告：15:00前转入资金（以支付成功时间为准），第二个工作日确认份额，收益将在确认后次日发放，15:00后转入资金顺延1个工作日发放收益。双休日及国家法定假期，基金公司不进行份额确认。</div>
-        <div class="date-line">
+        <div id="date-line-redeem" class="date-line">
             <div class="line-point point-left">
                 <div class="point-icon"></div>
                 <div class="point-text">
@@ -26,12 +26,28 @@
                 </div>
             </div>
         </div>
+		<div id="date-line-realredeem" class="date-line" style="display:none">
+			<div class="line-point point-left">
+                <div class="point-icon"></div>
+                <div class="point-text">
+                    <div class="text-name">取现日期</div>
+                    <div class="text-date">${today}</div>
+                </div>
+            </div>
+            <div class="line-point point-right">
+                <div class="point-icon"></div>
+                <div class="point-text">
+                    <div class="text-name">到账日期</div>
+                    <div class="text-date">${today}</div>
+                </div>
+            </div>
+		</div>
         <div class="form-cash">
             <form class="common-form" action="${ufbDomain}/trade/cash_result.htm" method="post">
 				${refreshTools.genInputHtml()}
 				<input id="tradeacco" name="tradeacco" value="${card.tradeacco}" type="hidden"/>
 				<input id="cardAvailable" name="cardAvailable" value="${card.available}" type="hidden"/>
-				
+				<input id="apkind" name="apkind" value="${card.apkind}" type="hidden"/>
 				<ul>
                     <li>
                         <span class="form-title">总资产</span>
@@ -71,6 +87,17 @@
                         <div class="mark">
 							<font id="cardAvailableDisplay" >${cardAvailableDisplay}</font>元
 						</div>
+                    </li>
+					<li>
+                        <span class="form-title">取现方式</span>
+						<div class="takentype">
+							<!--
+							<label id="takenback" class="lbl-takenback on">&nbsp;</label>
+							<label id="realtakenback" class="lbl-realtakenback">&nbsp;</label>
+							-->
+							<input type="radio" name="apkindchk" value="023" checked/>普通取现
+							<input type="radio" name="apkindchk" value="024"/>快速取现
+                        </div>                        
                     </li>
                     <li>
                         <span class="form-title">取现金额</span>
@@ -149,7 +176,6 @@
 		
 		// 表单提交时，验证	
 		$("#submit").on("click", function(){
-		
 			if(!check_cash($("#appvol"))){
 				return false;
 			}
@@ -160,6 +186,23 @@
 				showTips($("#appvol"), "取现金额大于本卡可取金额！");
 				return false;
 			}
+			$("#apkind").val($("input[type=radio]:checked").val());
+		});
+		
+		$("input[type=radio]").on("click", function(){
+			var apkind = $("input[type=radio]:checked").val();
+			if(apkind == "023"){
+				//$(".notice").html("公告：15:00前转入资金（以支付成功时间为准），第二个工作日确认份额，收益将在确认后次日发放，15:00后转入资金顺延1个工作日发放收益。双休日及国家法定假期，基金公司不进行份额确认。");
+				$("#date-line-redeem").show();
+				$("#date-line-realredeem").hide();
+			}else if(apkind == "024"){
+				//$(".notice").html("公告：实时到账。");
+				$("#date-line-redeem").hide();
+				$("#date-line-realredeem").show();
+			}else{
+			
+			}
+			
 		});
 	});
 </script>
