--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_result.vm
@@ -1,8 +1,15 @@
 <div style="text-align: center; padding-top: 100px; padding-bottom: 100px;">
+	#if(${APKIND} == "023")
 	<h1>取现成功！</h1>
 	<p>您的取现已成功，资金将于第二个工作日下午17点前，到达您的银行卡中，可通过交易查询查询记录状态。
 	   <a href="${ufbDomain}/query/trade_detail.htm">立即查询</a>
 	</p>
+	#elseif(${APKIND} == "024")
+	<h1>快速取现成功！</h1>
+	<p>您的快速取现已成功，资金稍后将到达您的银行卡中，可通过交易查询查询记录状态。
+	   <a href="${ufbDomain}/query/trade_detail.htm">立即查询</a>
+	</p>
+	#end
 </div>
 	
 <script src="${staticDomain}/js/scripts/load.js"></script>
