--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -114,7 +114,7 @@ $(function(){
 					var errMsg = b.errMsg;
 					//alert(errCode + ": " + errMsg);
 					if("errMsg_verifycode"==errCode || "errMsg_mobileno"==errCode){
-						$("#errMsg_verifycode").addClass("error");
+						$("#errMsg_verifycode").removeClass("ok").addClass("error");
 						$("#errMsg_verifycode > .tips-check").html("<i class=icon></i>" + errMsg);
 					}else{
 						alert(errMsg);
@@ -159,7 +159,7 @@ $(function(){
     			href="${staticDomain}/home/index.htm">首页</a>|<a 
     			href="${staticDomain}/session/login.htm">资产总览</a>|<a class="current" 
     			href="${staticDomain}/setting/settingAccount.htm">账户管理</a>|<a 
-    			href="helpNotice.html">帮助中心</a><span class="member" 
+    			href="${staticDomain}/help/helpNotice.htm">帮助中心</a><span class="member" 
     			href="javascript:;"><i class="trans icon"></i>
     				#if ($CustinfoVo.invnm)
     					$!{CustinfoVo.invnm}
