--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
@@ -47,6 +47,7 @@
 				${refreshTools.genInputHtml()}
 				<input id="tradeacco" name="tradeacco" value="${card.tradeacco}" type="hidden"/>
 				<input id="cardAvailable" name="cardAvailable" value="${card.available}" type="hidden"/>
+				<input id="cardRealAvailable" name="cardRealAvailable" value="${card.realavailable}" type="hidden"/>
 				<input id="apkind" name="apkind" value="${card.apkind}" type="hidden"/>
 				<ul>
                     <li>
@@ -68,7 +69,7 @@
                                 <div class="card-list clearfix">
 									#foreach($c in $cardList)
                                     <a class="card" href="javascript:;"
-										cardTradeacco="${c.tradeacco}" cardAvailable="${c.available}">
+										cardTradeacco="${c.tradeacco}" cardAvailable="${c.available}" cardRealAvailable="${c.realavailable}">
 										#set($tailStr=$c.bankacco)
 										#set($start=$tailStr.length() - 4)
 										#set($end=$tailStr.length())
@@ -82,10 +83,13 @@
                         <span class="tips-normal"></span>
                         <span class="tips-check"><i class="icon"></i>验证提示</span>
                     </li>
-                    <li>
+					<li>
                         <span class="form-title">可用金额</span>
-                        <div class="mark">
+                        <div id="mark" class="mark">
 							<font id="cardAvailableDisplay" >${cardAvailableDisplay}</font>元
+						</div>
+						<div id="realmark" class="mark" style="display:none">
+							<font id="cardRealAvailableDisplay" >${cardRealAvailableDisplay}</font>元
 						</div>
                     </li>
 					<li>
@@ -144,9 +148,19 @@
 		
 		// 增加安全中心验证
 		$(".ipt-cash").on("blur", function() {
-            if($("#appvol").val() - $("#cardAvailable").val() > 0){
-				showTips($(this), "取现金额大于本卡可取金额！");
-				return false;
+			var apkind = $("input[type=radio]:checked").val();
+			if(apkind == "023"){
+    			if($("#appvol").val() - $("#cardAvailable").val() > 0){
+    				showTips($("#appvol"), "取现金额大于本卡可取金额！");
+    				return false;
+    			}
+			}else if(apkind == "024"){
+				if($("#appvol").val() - $("#cardRealAvailable").val() > 0){
+					showTips($("#appvol"), "快取取现金额大于本卡可取金额！");
+					return false;
+				}
+			}else{
+			
 			}
         });
 		
@@ -172,6 +186,8 @@
 			$("#tradeacco").val($(this).attr("cardTradeacco"));
 			$("#cardAvailable").val($(this).attr("cardAvailable"));
 			$("#cardAvailableDisplay").html(formatCurrency2($(this).attr("cardAvailable")));
+			$("#cardRealAvailable").val($(this).attr("cardRealAvailable"));
+			$("#cardRealAvailableDisplay").html(formatCurrency2($(this).attr("cardRealAvailable")));
 		});
 		
 		// 表单提交时，验证	
@@ -182,10 +198,21 @@
 			if(!check_pwd1($("#tradePwd"))){
 				return false;
 			}
-			if($("#appvol").val() - $("#cardAvailable").val() > 0){
-				showTips($("#appvol"), "取现金额大于本卡可取金额！");
-				return false;
+			var apkind = $("input[type=radio]:checked").val();
+			if(apkind == "023"){
+    			if($("#appvol").val() - $("#cardAvailable").val() > 0){
+    				showTips($("#appvol"), "取现金额大于本卡可取金额！");
+    				return false;
+    			}
+			}else if(apkind == "024"){
+				if($("#appvol").val() - $("#cardRealAvailable").val() > 0){
+					showTips($("#appvol"), "快取取现金额大于本卡可取金额！");
+					return false;
+				}
+			}else{
+			
 			}
+			
 			$("#apkind").val($("input[type=radio]:checked").val());
 		});
 		
@@ -195,10 +222,15 @@
 				//$(".notice").html("公告：15:00前转入资金（以支付成功时间为准），第二个工作日确认份额，收益将在确认后次日发放，15:00后转入资金顺延1个工作日发放收益。双休日及国家法定假期，基金公司不进行份额确认。");
 				$("#date-line-redeem").show();
 				$("#date-line-realredeem").hide();
+				$("#mark").show();
+				$("#realmark").hide();
+				
 			}else if(apkind == "024"){
 				//$(".notice").html("公告：实时到账。");
 				$("#date-line-redeem").hide();
 				$("#date-line-realredeem").show();
+				$("#realmark").show();
+				$("#mark").hide();
 			}else{
 			
 			}
