--- a/ufb.web/src/main/webapp/css/common.css
+++ b/ufb.web/src/main/webapp/css/common.css
@@ -136,6 +136,8 @@ a.btn {
 	border-top: 5px solid #cb3849;
 	height: 85px;
 	background-color: #ffffff;
+    position: relative;
+    z-index: 1;
 }
 .header .logo {
 	padding-top: 15px;
@@ -186,12 +188,13 @@ a.btn {
 	width: 100%;
 	text-align: center;
 	display: none;
-	padding: 0;
+	padding: 0 10px;
 	background-color: #ffffff;
 	-webkit-box-shadow:  1px 1px 3px 0 #666666;
 	-moz-box-shadow:  1px 1px 3px 0 #666666;
 	box-shadow:  1px 1px 3px 0 #666666;
 	z-index: 100;
+	white-space: nowrap;
 }
 .header .nav .member.on .out {
 	display: block;
@@ -346,6 +349,7 @@ a.btn {
 }
 .error-box .error-title {
 	line-height: 40px;
+    	height: 40px;
 	font-size: 14px;
 	padding: 0 20px;
 	position: relative;
