--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerPage.vm
@@ -131,8 +131,8 @@ $(function(){
         <div class="nav"><a 
 			href="${staticDomain}/home/index.htm">登录</a>|<a 
 			href="${staticDomain}/cust/register.htm">注册</a>|<a 
-			href="javascript:;">我的幼富通</a>|<a class="last" 
-			href="javascript:;">帮助</a></div>
+			href="javascript:;">资产总览</a>|<a class="last" 
+			href="${staticDomain}/help/helpNotice.htm">帮助中心</a></div>
     </div>
 </div>
 <div class="body">
@@ -208,7 +208,7 @@ $(function(){
                         #end
                         >
                             <span class="form-title">经办人手机号</span>
-                            <input id="mobileno" name="mobileno" class="ipt-phoneNum input-text" type="text" value="$!{CustinfoVo.mobileno}">
+                            <input id="mobileno" name="mobileno" class="ipt-phoneNum input-text" maxlength="11" type="text" value="$!{CustinfoVo.mobileno}">
                             <span class="tips-normal">请输入手机号</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_mobileno}</span>
                         </li>
@@ -218,7 +218,7 @@ $(function(){
                         #end
                         >
                             <span class="form-title">验证码</span>
-                            <input id="verifycode" name="verifycode" class="ipt-code input-code" type="text" value="$!{CustinfoVo.verifycode}">
+                            <input id="verifycode" name="verifycode" class="ipt-code input-code" maxlength="4" type="text" value="$!{CustinfoVo.verifycode}">
                             <span class="tips-normal">请输入验证码</span>
 							<span class="form-verifyCode">
 								<img id="btn-verifycode" src="${staticDomain}/createImageservlet"+"?time="+(+new Date())" onclick="javascript:this.src=this.src+'?time='+(+new Date())"/>
@@ -231,7 +231,7 @@ $(function(){
                         #end
                         >
                             <span class="form-title">手机验证码</span>
-                            <input id="msgcode" name="msgcode" class="ipt-phoneCode input-code" type="text" value="$!{CustinfoVo.msgcode}">
+                            <input id="msgcode" name="msgcode" class="ipt-phoneCode input-code" maxlength="6" type="text" value="$!{CustinfoVo.msgcode}">
                             <input id="btn-getMsgCode" class="input-button" type="button" value="获取验证码">
                             <span class="tips-normal">6位验证码</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_msgcode}</span>
@@ -242,7 +242,7 @@ $(function(){
                         #end
                         >
                             <span class="form-title">设置新密码</span>
-                            <input id="pswpwd" name="pswpwd" class="ipt-password1 input-text" type="password" value="$!{CustinfoVo.pswpwd}">
+                            <input id="pswpwd" name="pswpwd" class="ipt-password1 input-text" maxlength="20" type="password" value="$!{CustinfoVo.pswpwd}">
                             <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd}</span>
                         </li>
@@ -252,7 +252,7 @@ $(function(){
                         #end
                         >
                             <span class="form-title">确认新密码</span>
-                            <input id="pswpwd2" name="pswpwd2" class="ipt-password2 input-text" type="password" value="$!{CustinfoVo.pswpwd2}">
+                            <input id="pswpwd2" name="pswpwd2" class="ipt-password2 input-text" maxlength="20" type="password" value="$!{CustinfoVo.pswpwd2}">
                             <span class="tips-normal">请再次输入密码</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd2}</span>
                         </li>
@@ -262,7 +262,7 @@ $(function(){
                         #end
                         >
 							<span class="form-title">幼教机构名称</span>
-							<input id="organization" name="organization" class="ipt-organization input-text" type="text" value="$!{CustinfoVo.organization}">
+							<input id="organization" name="organization" class="ipt-organization input-text" maxlength="28" type="text" value="$!{CustinfoVo.organization}">
 							<span class="tips-normal">请按照营业执照填写</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_organization}</span>
                         </li>
@@ -272,7 +272,7 @@ $(function(){
                         #end
                         >
 							<span class="form-title">营业执照注册号</span>
-							<input id="business" name="business" class="ipt-business input-text" type="text" value="$!{CustinfoVo.business}">
+							<input id="business" name="business" class="ipt-business input-text" maxlength="28" type="text" value="$!{CustinfoVo.business}">
 							<span class="tips-normal">请按照营业执照填写</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_business}</span>
                         </li>
