--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -208,7 +208,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">原登录密码</span>
-                                    <input id="login_password0" name="password0" class="ipt-password0 input-text" type="password" value="$!{login_password0}">
+                                    <input id="login_password0" name="password0" class="ipt-password0 input-text" maxlength="20" type="password" value="$!{login_password0}">
                                     <span class="tips-normal"></span>
                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_login_password0}</span>
                                 </li>
@@ -218,7 +218,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">新登录密码</span>
-                                    <input id="login_password1" name="password1" class="ipt-password1 input-text" type="password" value="$!{login_password1}">
+                                    <input id="login_password1" name="password1" class="ipt-password1 input-text" maxlength="20" type="password" value="$!{login_password1}">
                                     <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_login_password1}</span>
                                 </li>
@@ -228,7 +228,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">登录密码确认</span>
-                                    <input id="login_password2" name="password2" class="ipt-password2 input-text" type="password" value="$!{login_password2}">
+                                    <input id="login_password2" name="password2" class="ipt-password2 input-text" maxlength="20" type="password" value="$!{login_password2}">
                                     <span class="tips-normal">请再次输入密码</span>
                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_login_password2}</span>
                                 </li>
@@ -249,7 +249,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">原交易密码</span>
-                                    <input id="trade_password0" name="password0" class="ipt-password0 input-text" type="password" value="$!{trade_password0}">
+                                    <input id="trade_password0" name="password0" class="ipt-password0 input-text" maxlength="20" type="password" value="$!{trade_password0}">
                                     <span class="tips-normal"></span>
                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password0}</span>
                                 </li>
@@ -259,7 +259,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">新交易密码</span>
-                                    <input id="trade_password1" name="password1" class="ipt-password1 input-text" type="password" value="$!{trade_password1}">
+                                    <input id="trade_password1" name="password1" class="ipt-password1 input-text" maxlength="20" type="password" value="$!{trade_password1}">
                                     <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password1}</span>
                                 </li>
@@ -269,7 +269,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">交易密码确认</span>
-                                    <input id="trade_password2" name="password2" class="ipt-password2 input-text" type="password" value="$!{trade_password2}">
+                                    <input id="trade_password2" name="password2" class="ipt-password2 input-text" maxlength="20" type="password" value="$!{trade_password2}">
                                     <span class="tips-normal">请再次输入密码</span>
                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password2}</span>
                                 </li>
@@ -293,7 +293,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">验证码</span>
-									<input id="verifycode" name="verifycode" class="ipt-code input-code" type="text" value="$!{verifycode}">
+									<input id="verifycode" name="verifycode" class="ipt-code input-code" maxlength="4" type="text" value="$!{verifycode}">
                                     <span class="tips-normal">请输入验证码</span>
 									<span class="form-verifyCode">
         								<img id="btn-verifycode" src="${staticDomain}/createImageservlet"+"?time="+(+new Date())" onclick="javascript:this.src=this.src+'?time='+(+new Date())"/>
@@ -306,7 +306,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">手机验证码</span>
-									<input id="msgcode" name="msgcode" class="ipt-phoneCode input-code" type="text" value="$!{msgcode}">
+									<input id="msgcode" name="msgcode" class="ipt-phoneCode input-code" maxlength="6" type="text" value="$!{msgcode}">
                                     <span class="tips-normal">6位验证码</span>
                                     <input id="btn-getMsgCode" class="input-button" type="button" value="获取验证码">
                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_msgcode}</span>
@@ -317,7 +317,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">新交易密码</span>
-                                    <input id="trade_password1_back" name="password1" class="ipt-password1 input-text" type="password" value="$!{trade_password1_back}">
+                                    <input id="trade_password1_back" name="password1" class="ipt-password1 input-text" maxlength="20" type="password" value="$!{trade_password1_back}">
                                     <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password1_back}</span>
                                 </li>
@@ -327,7 +327,7 @@ $(function(){
                                 #end
                                 >
                                     <span class="form-title">交易密码确认</span>
-                                    <input id="trade_password2_back" name="password2" class="ipt-password2 input-text" type="password" value="$!{trade_password2_back}">
+                                    <input id="trade_password2_back" name="password2" class="ipt-password2 input-text" maxlength="20" type="password" value="$!{trade_password2_back}">
                                     <span class="tips-normal">请再次输入密码</span>
                                     <span class="tips-check"><i class="icon"></i>$!{errMsg_trade_password2_back}</span>
                                 </li>
